--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -9,8 +9,10 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
+    <div class="main">
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
+    <button type="button" data-stop>Stop</button>
 
     <div class="timer">
       <div class="field">
@@ -30,7 +32,7 @@
         <span class="label">Seconds</span>
       </div>
     </div>
-
+</div>
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
